# VFBquery

./: .env  .gitignore  CACHING.md  DEFAULT_CACHING_SUMMARY.md  Dockerfile  ENHANCED_SOLR_CACHING_SUMMARY.md  README.md  RELEASE_NOTES_v1.7.2.md  RELEASE_NOTES_v1.7.3.md  RELEASE_NOTES_v1.7.4.md  RELEASING.md  SOLR_CACHING.md  VFB_QUERIES_REFERENCE.md  cache_optimization_demo.py  debug_cache_result.py  debug_cache_storage.py  debug_solr_cache.py  fix_readme.py  get_version.py  native_caching_demo.py  performance.md  production_cache_test.py  pyproject.toml  release_notes.md  requirements.txt  restore_solr_data.py  run_examples.py  schema.md  setup.py  solr_cache_demo.py  test_allowed_patterns.py  test_atomic_update.py  test_correct_atomic.py  test_correct_atomic_syntax.py  test_diff_output.txt  test_doc_existence.py  test_field_patterns.py  test_manual_atomic.py  test_neurons_part_here.py  test_parsing.sh  (+7 more)
.github/workflows/: docker.yml  examples.yml  performance-test.yml  publish_to_pypi.yaml  python-test.yml
clients/vfbquery-client/: README.md  pyproject.toml
clients/vfbquery-client/src/vfbquery_client/: __init__.py  client.py
clients/vfbquery-client/tests/: test_smoke.py
docs/: draft_search_xref_endpoints.py  vfbconnect-http-api-plan.md
src/: __init__.py  term_info_queries.py  vfb_queries.py
src/test/: readme_parser.py  term_info_queries_test.py  test_anatomy_expressed_in.py  test_downstream_class_connectivity.py  test_examples_diff.py  test_expression_overlaps.py  test_expression_pattern_fragments.py  test_expression_pattern_individual_queries.py  test_flybase_combo_pubs.py  test_flybase_stocks.py  test_graph_builder.py  test_ha_api_validation.py  test_hierarchy.py  test_images_neurons.py  test_lineage_clones_in.py  test_merge_synonyms.py  test_neuron_classes_fasciculating.py  test_neuron_inputs.py  test_neuron_neuron_connectivity.py  test_neuron_region_connectivity.py  test_new_owlery_queries.py  test_preview_stray_backslash.py  test_query_performance.py  test_solr_cache_failover.py  test_template_no_painted_domains.py  test_term_info_parity.py  test_tracts_nerves_innervating.py  test_upstream_class_connectivity.py  test_vfb_connectivity.py
src/vfbquery/: __init__.py  _version.py  cached_functions.py  flybase_combo_pubs.py  flybase_db.py  flybase_stocks.py  graph_builder.py  ha_api.py  neo4j_client.py  owlery_client.py  solr_fetcher.py  solr_result_cache.py  term_info_queries.py  test_utils.py  vfb_connectivity.py  vfb_queries.py
tests/: test_gzip_cache.py
